toast fixed on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -154,9 +154,9 @@
         @apply mx-2 font-extrabold;
     }
     .toast-area {
-        @apply absolute bottom-0 px-10 py-3 transition-all duration-700;
+        @apply absolute bottom-0 my-2 flex w-screen justify-center py-3 text-center transition-all duration-700;
     }
     .toast-bg {
-        @apply rounded-xl bg-blue px-6 py-2 text-white;
+        @apply mx-auto w-3/4 rounded-2xl bg-blue px-6 py-2 text-white;
     }
 }
